# android-project

./: .gitmodules  filter_debug.sh
app/: build.gradle
app/jni/: CMakeLists.txt
app/src/main/: AndroidManifest.xml
